--- a/New02.html
+++ b/New02.html
@@ -21,14 +21,14 @@
                 <a href="index.html">Home</a>
             </ul>
             <ul>
-                <a href="index.html #Cont-blog">Notícias</a>
+                <a href="index.html">Notícias</a>
             </ul>
         </div>
     </header>
    <div class="background" >
         <div class="blog" id="blog">
             <div class="way">
-                <a  href="index.html #Cont-blog"><h3>NOTÍCIA</h3></a>
+                <a  href="index.html"><h3>NOTÍCIA</h3></a>
             </div>
             <div class="title">
                 <h1>O anime Tensei Kenja no Isekai Life ganha trailer com data de estreia</h1>
