--- a/New03.html
+++ b/New03.html
@@ -13,7 +13,7 @@
     <header class="head">
         <div>
             <ul class="logo">
-                <a href="Index.html" title="PyrAnimex"><img src="img/Logo_PyrAnimex.png"></a>
+                <a href="index.html" title="PyrAnimex"><img src="img/Logo_PyrAnimex.png"></a>
             </ul>
         </div>
         <div class="links-1">
@@ -21,14 +21,14 @@
                 <a href="index.html">Home</a>
             </ul>
             <ul>
-                <a href="index.html #Cont-blog">Notícias</a>
+                <a href="index.html">Notícias</a>
             </ul>
         </div>
     </header>
    <div class="background" >
         <div class="blog" id="blog">
             <div class="way">
-                <a  href="index.html #Cont-blog"><h3>NOTÍCIA</h3></a>
+                <a  href="index.html"><h3>NOTÍCIA</h3></a>
             </div>
             <div class="title">
                 <h1>Kimetsu no Yaiba ganha 3º temporada com trailer</h1>
