--- a/New01.html
+++ b/New01.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/Icon_PyrAnimex.png">
+    <link rel="shortcut icon" href="IMG/Icon_PyrAnimex.png">
     <link rel="stylesheet" href="CSS\all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Blog PyrAnimex</title>
@@ -13,7 +13,7 @@
     <header class="head">
         <div>
             <ul class="logo">
-                <a href="index.html" title="PyrAnimex"><img src="img/Logo2_PyrAnimex.png"></a>
+                <a href="index.html" title="PyrAnimex"><img src="IMG/Logo2_PyrAnimex.png"></a>
             </ul>
         </div>
         <div class="links-1">
