--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="links-1">
             <ul>
-                <a href="index.html #prod">Home</a>
+                <a href="index.html">Home</a>
             </ul>
             <ul>
                 <a href="#Cont-blog">Notícias</a>
