--- a/New06.html
+++ b/New06.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/Icon_PyrAnimex.png">
+    <link rel="shortcut icon" href="IMG/Icon_PyrAnimex.png">
     <link rel="stylesheet" href="CSS\all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Blog PyrAnimex</title>
@@ -13,7 +13,7 @@
     <header class="head">
         <div>
             <ul class="logo">
-                <a href="Index.html" title="PyrAnimex"><img src="img/Logo_PyrAnimex.png"></a>
+                <a href="index.html" title="PyrAnimex"><img src="IMG/Logo_PyrAnimex.png"></a>
             </ul>
         </div>
         <div class="links-1">
@@ -21,14 +21,14 @@
                 <a href="index.html">Home</a>
             </ul>
             <ul>
-                <a href="index.html #Cont-blog">Notícias</a>
+                <a href="index.html">Notícias</a>
             </ul>
         </div>
     </header>
    <div class="background" >
         <div class="blog" id="blog">
             <div class="way">
-                <a  href="index.html #Cont-blog"><h3>NOTÍCIA</h3></a>
+                <a  href="index.html"><h3>NOTÍCIA</h3></a>
             </div>
             <div class="title">
                 <h1>Black Clover – tem trailer do filme revelado com previsão de estreia anunciada.</h1>
