--- a/New05.html
+++ b/New05.html
@@ -13,7 +13,7 @@
     <header class="head">
         <div>
             <ul class="logo">
-                <a href="Index.html" title="PyrAnimex"><img src="IMG/Logo_PyrAnimex.png"></a>
+                <a href="index.html" title="PyrAnimex"><img src="IMG/Logo_PyrAnimex.png"></a>
             </ul>
         </div>
         <div class="links-1">
