--- a/New06.html
+++ b/New06.html
@@ -40,7 +40,7 @@
                     <iframe width="720" height="405" src="https://www.youtube.com/embed/Pdh7Gw8yOTA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 
-                <p>O canal oficial da Weekly Shounen JUMP no Youtube liberou um trailer para a continuação em filme de Black Clover, com data de estreia prevista para algum momento de 2023.</p>
+                <p>Black Clover conta a história de um mundo onde ser um usuário de magia é algo comum. É nesse mundo que o protagonista, um garoto que não poder usar magia nasceu, mesmo com essa limitação, ele sonha em se tornar o Rei dos Magos.</p>
                 <h5>FONTE:  <a href="https://www.animenewsnetwork.com/news/2022-03-13/black-clover-anime-film-opens-in-2023/.183490" class="font"> ANN</a></h5>
             </div>        
         </div>
